--- a/views/dashboard/userProfile.jade
+++ b/views/dashboard/userProfile.jade
@@ -198,5 +198,6 @@ if isEditable
         var userExpertise = JSON.parse( '!{JSON.stringify(escapeObject(userExpertise))}' );
         var unEscapeObject = !{unEscapeObject};
     script(src='/js/app/dashboard/userProfile.js')
+    script(src='/js/app/dashboard/fileUpload.js')
     script(src='/js/app/dashboard/memberEducation.js')
     script(src='/js/app/dashboard/memberEmployment.js')
