--- a/views/dashboard/mobileVerification.jade
+++ b/views/dashboard/mobileVerification.jade
@@ -1,5 +1,5 @@
 title SearchNTalk - Mobile Verification
-include ../memberRegistration/header
+include ../header
 .matter
     .container
         .row
