Added member added email notification

--- a/views/dashboard/forgotPassword.jade
+++ b/views/dashboard/forgotPassword.jade
@@ -9,17 +9,17 @@ title SearchNTalk - Forgot Password
                     form#reset-password
                         .form-group
                             label.control-label(for='password') New Password
-                            input.form-control#password(type='password', placeholder='New password', name='password', data-toggle="tooltip", data-placement="bottom")
+                            input.form-control#password(type='password', placeholder='New password', name='password')
                         .form-group
                             label.control-label(for='confirm-password') Confirm New Password
-                            input.form-control#confirm_password(type='password', name='confirm_password', placeholder='Confirm password', data-toggle="tooltip", data-placement="bottom")
+                            input.form-control#confirm_password(type='password', name='confirm_password', placeholder='Confirm password')
                         .form-group
                             input.btn.btn-primary(type='submit', value='Update Password')
                 - else
                     form#request-new-password
                         .form-group
                             label.control-label(for='email') Email
-                            input.form-control#email(type='text', placeholder='Email', name='email', data-toggle="tooltip", data-placement="bottom")
+                            input.form-control#email(type='text', placeholder='Email', name='email')
                         .form-group
                             input.btn.btn-primary(type='submit', value='Reset password')
         .col-md-2
