--- a/views/dashboard/dashboard.jade
+++ b/views/dashboard/dashboard.jade
@@ -4,6 +4,42 @@ title SearchNTalk - DashBoard
 .matter
     .container
         .row
-            .content.col-md-4
+            .content.col-md-6
                 .row
+                    .card#becomeAnExpertCard
+                        .item
+                            .row
+                                h5.col-xs-8 Become an Expert
+                                .header-link.col-xs-4
+                        .item
+                            .row
+                                div Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
+                                |Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec,
+                                |pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget,
+                                |arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt.
+                                |Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend
+                                |ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum.
+                                |Aenean imperdiet. Etiam ultricies nisi vel augue.
+                        .item
+                            .row
+                                input.btn.btn-primary#submit(type='submit', value='Save')
+            .content.col-md-6
+                .row
+                    .card#startExpertNetworkCard
+                        .item
+                            .row
+                                h5.col-xs-8 Start An Expert Network
+                                .header-link.col-xs-4
+                        .item
+                            .row
+                                div Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa.
+                                |Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec,
+                                |pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget,
+                                |arcu. In enim justo, rhoncus ut, imperdiet a, venenatis vitae, justo. Nullam dictum felis eu pede mollis pretium. Integer tincidunt.
+                                |Cras dapibus. Vivamus elementum semper nisi. Aenean vulputate eleifend tellus. Aenean leo ligula, porttitor eu, consequat vitae, eleifend
+                                |ac, enim. Aliquam lorem ante, dapibus in, viverra quis, feugiat a, tellus. Phasellus viverra nulla ut metus varius laoreet. Quisque rutrum.
+                                |Aenean imperdiet. Etiam ultricies nisi vel augue.
+                        .item
+                            .row
+                                input.btn.btn-primary#submit(type='submit', value='Save')
 include ../footer
