--- a/views/header.jade
+++ b/views/header.jade
@@ -33,13 +33,12 @@ head
             $(".user-control").hover(function() { $(".user-control .user-modal").show(); } , function() { $(".user-control .user-modal").hide(); });
             $('.datepicker').datetimepicker();
         });
-
-.masthead(role='banner')
-    .container
-        .masthead-brand
-            a.logo.hidden-xs(href='/')
-            a.icon.visible-xs(href='/')
-        .masthead-controls
+div.masthead(role='banner')
+    div.container
+        div.masthead-brand
+            a.logo.hidden-xs(href='#')
+            a.icon.visible-xs(href='#')
+        div.masthead-controls
             if loggedInUser
                 .masthead-control-field.user-control
                     .info
@@ -63,7 +62,22 @@ head
                             li
                                 a.btn.btn-primary(href=DashboardUrls.logout() + '?returnTo=' + path) Logout
             else
-                .masthead-control-field.user-control
-                    a.btn.btn-primary(href=DashboardUrls.login()) Login
-            .clearer
-        .clearer
+                div.masthead-control-field
+                    div.field-trigger
+                        span.hidden-xs Don't have an account yet?
+                        a.btn.btn-default(href=DashboardUrls.register()) Sign Up
+                div.masthead-control-field
+                    div.field-action
+                        a.btn.btn-primary.login(href=DashboardUrls.login()) Login
+                div.masthead-control-field.lang-control
+                    div.field-boxedinfo
+                        div.lang en
+                        div.shadow
+                    div.caret
+                    div.lang-modal(style='display: none;')
+                        div.field-label
+                            | Language
+                        div.field-menu
+                            select(name='ui_language')
+                                option(value='en', selected='')
+                                    | English
